--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
                 <i class="fas fa-signal"></i>
                 coco
             </div>
-            <div class="wi-fi">
-                <img src="">
-            </div>
         </div>
         <div class="clock">
         </div>
         <div class="power">
-            <span>
-                88%
+            <span class="battery-percent">
+                
             </span>
-            <i class="fas fa-battery-full"></i>
+            <div class="battery-image">
+                <i class="fas fa-battery-full"></i>
+                <i class="fas fa-battery-three-quarters"></i>
+                <i class="fas fa-battery-half"></i>
+                <i class="fas fa-battery-quarter"></i>
+                <i class="fas fa-battery-empty"></i>
+            </div>
         </div>
     </div>
     <header class="login-header">
@@ -50,7 +53,7 @@
     <div class="no-mobile">
         Your screen is too big!<br>Try smaller 😉
     </div>
-    <script src="clock.js"></script>
+    <script src="status-bar.js"></script>
     <script src="https://kit.fontawesome.com/e92b518d9c.js" crossorigin="anonymous"></script>
 </body>
 </html>
