--- a/chats.html
+++ b/chats.html
@@ -50,7 +50,7 @@
         </div>
     </header>
     <main class="chatrooms">
-        <a href="chat-with-rapunzel.html">
+        <a href="chat.html">
             <div class="chatroom">
                 <div class="sender">
                     <div class="sender-profile">
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </a>
-        <a href="group-chatroom.html">
+        <a href="#">
             <div class="chatroom">
                 <div class="sender">
                     <div class="sender-profile">
