--- a/view.html
+++ b/view.html
@@ -46,20 +46,20 @@
             </span>
         </div>
     </header>
+    <div class="main-menu">
+        <ul>
+            <li class="current-list">My View</li>
+            <li>Discover</li>
+            <li>COVID-19</li>
+            <li>coco tv+</li>
+        </ul>
+    </div>
     <main class="view-content">
-        <div class="main-menu">
-            <ul>
-                <li class="current-list">My View</li>
-                <li>Discover</li>
-                <li>COVID-19</li>
-                <li>coco tv+</li>
-            </ul>
-        </div>
         <div class="main-content">
             <p>
-                Add channels that interest you <br>and create a My View tab that's uniquely you!
+                Add channels that interest you and <br>create a My View tab that's uniquely you!
             </p>
-            <img src="#">
+            <img src="img/main-content.png">
             <button type="button">
                 Explore Channels
             </button>
