--- a/friends.html
+++ b/friends.html
@@ -1,132 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Friends</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="status-bar">
-        <div class="connection">
-            <div class="carrier">
-                <i class="fas fa-signal"></i>
-                coco
-            </div>
+      <div class="connection">
+        <div class="carrier">
+          <i class="fas fa-signal"></i>
+          coco
         </div>
-        <div class="clock">
+      </div>
+      <div class="clock"></div>
+      <div class="power">
+        <span class="battery-percent"> </span>
+        <div class="battery-image">
+          <i class="fas fa-battery-full"></i>
+          <i class="fas fa-battery-three-quarters"></i>
+          <i class="fas fa-battery-half"></i>
+          <i class="fas fa-battery-quarter"></i>
+          <i class="fas fa-battery-empty"></i>
         </div>
-        <div class="power">
-            <span class="battery-percent">
-                
-            </span>
-            <div class="battery-image">
-                <i class="fas fa-battery-full"></i>
-                <i class="fas fa-battery-three-quarters"></i>
-                <i class="fas fa-battery-half"></i>
-                <i class="fas fa-battery-quarter"></i>
-                <i class="fas fa-battery-empty"></i>
-            </div>
-        </div>
+      </div>
     </div>
     <header class="header">
-        <div class="header-title">
-            <strong>Friends</strong>
-        </div>
-        <div class="header-icons">
-            <span>
-                <i class="fas fa-search fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-user-plus fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-music fa-lg"></i>
-            </span>
-            <span>
-                <i class="fas fa-cog fa-lg"></i>
-            </span>
-        </div>
+      <div class="header-title">
+        <strong>Friends</strong>
+      </div>
+      <div class="header-icons">
+        <span>
+          <i class="fas fa-search fa-lg"></i>
+        </span>
+        <span>
+          <i class="fas fa-user-plus fa-lg"></i>
+        </span>
+        <span>
+          <i class="fas fa-music fa-lg"></i>
+        </span>
+        <span>
+          <i class="fas fa-cog fa-lg"></i>
+        </span>
+      </div>
     </header>
     <main class="friends-main">
-        <div class="user-profile">
-            <img src="img/user-profile.png" alt="user profile image">
-            <h2>Pascal</h2>
+      <div class="user-profile">
+        <img src="img/user-profile.png" alt="user profile image" />
+        <h2>Pascal</h2>
+      </div>
+      <div class="multi-profile">
+        <div class="multi-profile-header">
+          <span>My Multi-Profile 1</span>
+          <i class="fas fa-angle-up"></i>
         </div>
-        <div class="multi-profile">
-            <div class="multi-profile-header">
-                <span>My Multi-Profile 1</span>
-                <i class="fas fa-angle-up"></i>
-            </div>
-            <div class="multi-profile-space">
-                <div class="multi-profile-1">
-                    <img src="img/multi-profile.png" alt="multi profile image">
-                    <span lang="ko">soonzero</span>
-                </div>
-                <div class="multi-profile-create">
-                    <img src="img/create-multi-profile.png" alt="create new multi profile image">
-                    <span>Create</span>
-                </div>
-            </div>
+        <div class="multi-profile-space">
+          <div class="multi-profile-1">
+            <img src="img/multi-profile.png" alt="multi profile image" />
+            <span lang="ko">soonzero</span>
+          </div>
+          <div class="multi-profile-create">
+            <img
+              src="img/create-multi-profile.png"
+              alt="create new multi profile image"
+            />
+            <span>Create</span>
+          </div>
         </div>
-        <div class="channel">
-            <div class="channel-header">
-                <span>Channel</span>
-                <i class="fas fa-angle-up"></i>
-            </div>
-            <div class="channel-space">
-                <div class="channel-profile">
-                    <img src="img/chocolate-profile.png">
-                    <span>Channel</span>
-                </div>
-                <div class="channel-desc">
-                    <span>2</span>
-                    <i class="fas fa-angle-right"></i>
-                </div>
-            </div>
+      </div>
+      <div class="channel">
+        <div class="channel-header">
+          <span>Channel</span>
+          <i class="fas fa-angle-up"></i>
         </div>
+        <div class="channel-space">
+          <div class="channel-profile">
+            <img src="img/chocolate-profile.png" />
+            <span>Channel</span>
+          </div>
+          <div class="channel-desc">
+            <span>2</span>
+            <i class="fas fa-angle-right"></i>
+          </div>
+        </div>
+      </div>
     </main>
     <nav class="navigation-bar">
-        <ul>
-            <li>
-                <a href="friends.html">
-                    <i class="far fa-user fa-2x"></i>
-                    <!-- <i class="fas fa-user"></i> -->
-                </a>
-            </li>
-            <li class="notification-able">
-                <a href="chats.html">
-                    <i class="far fa-comment fa-2x"></i>
-                    <span class="notification badge">1</span>
-                    <!-- <i class="fas fa-comment"></i> -->
-                </a>
-            </li>
-            <li>
-                <a href="view.html">
-                    <i class="fas fa-cookie fa-2x"></i>
-                    <!-- <i class="fas fa-cookie-bite"></i> -->
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <i class="fas fa-shopping-bag fa-2x"></i>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <i class="fas fa-ellipsis-h fa-2x"></i>
-                </a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="friends.html">
+            <i class="far fa-user fa-2x"></i>
+            <!-- <i class="fas fa-user"></i> -->
+          </a>
+        </li>
+        <li class="notification-able">
+          <a href="chats.html">
+            <i class="far fa-comment fa-2x"></i>
+            <span class="notification badge">1</span>
+            <!-- <i class="fas fa-comment"></i> -->
+          </a>
+        </li>
+        <li>
+          <a href="view.html">
+            <i class="fas fa-cookie fa-2x"></i>
+            <!-- <i class="fas fa-cookie-bite"></i> -->
+          </a>
+        </li>
+        <li>
+          <a href="shopping.html">
+            <i class="fas fa-shopping-bag fa-2x"></i>
+          </a>
+        </li>
+        <li>
+          <a href="more.html">
+            <i class="fas fa-ellipsis-h fa-2x"></i>
+          </a>
+        </li>
+      </ul>
     </nav>
     <div class="screen-splash">
-        <i class="fas fa-comments fa-3x"></i>
+      <i class="fas fa-comments fa-3x"></i>
     </div>
-    <div class="no-mobile">
-        Your screen is too big!<br>Try smaller 😉
-    </div>
+    <div class="no-mobile">Your screen is too big!<br />Try smaller 😉</div>
     <script src="status-bar.js"></script>
-    <script src="https://kit.fontawesome.com/e92b518d9c.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/e92b518d9c.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
