--- a/login.html
+++ b/login.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>coco account</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./login.css" />
+  </head>
+  <body>
     <div class="status-bar">
-        <div class="connection">
-            <div class="carrier">
-                <i class="fas fa-signal"></i>
-                coco
-            </div>
+      <div class="connection">
+        <div class="carrier">
+          <i class="fas fa-signal"></i>
+          coco
         </div>
-        <div class="clock">
+      </div>
+      <div class="clock"></div>
+      <div class="power">
+        <span class="battery-percent"> </span>
+        <div class="battery-image">
+          <i class="fas fa-battery-full"></i>
+          <i class="fas fa-battery-three-quarters"></i>
+          <i class="fas fa-battery-half"></i>
+          <i class="fas fa-battery-quarter"></i>
+          <i class="fas fa-battery-empty"></i>
         </div>
-        <div class="power">
-            <span class="battery-percent">
-                
-            </span>
-            <div class="battery-image">
-                <i class="fas fa-battery-full"></i>
-                <i class="fas fa-battery-three-quarters"></i>
-                <i class="fas fa-battery-half"></i>
-                <i class="fas fa-battery-quarter"></i>
-                <i class="fas fa-battery-empty"></i>
-            </div>
-        </div>
+      </div>
     </div>
     <header class="login-header">
-        <strong>
-            Welcome to coco
-        </strong>
-        <span>
-            If you have an account, <br>log in with your email or phone number
-        </span>
+      <strong> Welcome to coco </strong>
+      <span>
+        If you have an account, <br />log in with your email or phone number
+      </span>
     </header>
     <main>
-        <form class="login-form" action="friends.html" method="get">
-            <input type="text" class="username" placeholder="Email or phone number">
-            <input type="password" class="password" placeholder="Password">
-            <button type="submit" class="login-button">
-                Login
-            </button>
-            <a href="#" class="find-account">
-                forgot your account?
-            </a>
-        </form>
+      <form class="login-form" action="friends.html" method="get">
+        <input
+          type="text"
+          class="username"
+          placeholder="Email or phone number"
+        />
+        <input type="password" class="password" placeholder="Password" />
+        <button type="submit" class="login-button">Login</button>
+        <a href="#" class="find-account"> forgot your account? </a>
+      </form>
     </main>
-    <div class="no-mobile">
-        Your screen is too big!<br>Try smaller 😉
-    </div>
+    <div class="no-mobile">Your screen is too big!<br />Try smaller 😉</div>
     <script src="status-bar.js"></script>
-    <script src="https://kit.fontawesome.com/e92b518d9c.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/e92b518d9c.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
