--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
       </form>
     </main>
     <div class="no-mobile">Your screen is too big!<br />Try smaller 😉</div>
-    <script src="status-bar.js"></script>
+    <script src="main.js"></script>
     <script
       src="https://kit.fontawesome.com/e92b518d9c.js"
       crossorigin="anonymous"
