--- a/view.html
+++ b/view.html
@@ -97,7 +97,7 @@
     </nav>
     <div id="guard"></div>
     <div class="no-mobile">Your screen is too big!<br />Try smaller 😉</div>
-    <script src="status-bar.js"></script>
+    <script src="main.js"></script>
     <script
       src="https://kit.fontawesome.com/e92b518d9c.js"
       crossorigin="anonymous"
