weather function added

--- a/more.html
+++ b/more.html
@@ -72,6 +72,11 @@
           </div>
         </div>
       </div>
+      <div class="weather">
+        <span class="current"></span>
+        <span class="tomorrow"></span>
+        <i class="fas fa-crosshairs getPosition"></i>
+      </div>
     </main>
     <nav class="navigation-bar">
       <ul>
@@ -109,6 +114,7 @@
     <div id="guard"></div>
     <div class="no-mobile">Your screen is too big!<br />Try smaller 😉</div>
     <script src="main.js"></script>
+    <script src="weather.js"></script>
     <script
       src="https://kit.fontawesome.com/e92b518d9c.js"
       crossorigin="anonymous"
